--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -60,5 +60,8 @@ a {
     text-align: center;
     color: #444444;
     border-top: 2px solid #dededf;
+    .card-link-icons {
+      font-size: 24px;
+    }
   }
 }
